# rust-dylib-serde-issue

./: Cargo.toml  README.md
serde-dynamic/: Cargo.toml
serde_json-dynamic/: Cargo.toml
src/: lib.rs  main.rs  test_serde_json.rs
