[package]
name = "rust-dylib-serde-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_dynamic = { version = "0.1.0", path = "serde-dynamic", package = "serde-dynamic", optional = true }
serde_json = "1.0.85"
serde_json_dynamic = { version = "0.1.0", path = "serde_json-dynamic", package = "serde_json-dynamic", optional = true }

[features]
default = []
dynamic = [
    "dep:serde_dynamic",
    "dep:serde_json_dynamic",
]
